--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <!DOCTYPE html>
 <html>
 <body>
+        pre code {
+  background-color: #eee;
+  border: 1px solid #999;
+  display: block;
+  padding: 20px;
+}
 <code>
 # Cora Wagner, Coleman Doherty, Nathaniel Champion
 # Intro to Data Science Final
