--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   padding: 20px;
 }
 <code>
-# Cora Wagner, Coleman Doherty, Nathaniel Champion
+# Cora Wagner, Coleman Doherty and Nathaniel Champion
 # Intro to Data Science Final
 
 # https://pythonguides.com/python-plot-multiple-lines/
