--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html>
 <body>
+        <pre>
         pre code {
   background-color: #eee;
   border: 1px solid #999;
@@ -9,7 +10,7 @@
   padding: 20px;
 }
 <code>
-# Cora Wagner, Coleman Doherty and Nathaniel Champion
+# Cora Wagner, Coleman Doherty, Nathaniel Champion
 # Intro to Data Science Final
 
 # https://pythonguides.com/python-plot-multiple-lines/
@@ -106,4 +107,5 @@ plt.show()
 # graph(soberDF['Placement'], highDF['Placement'], soberDF['Time'], highDF['Time'], p)
 
 </code>
+</pre>
 </body>
