--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         
 <code>
 
-# Cora Wagner, Coleman Doherty, Nathaniel Champion
+# Cora Wagner Coleman Doherty, Nathaniel Champion
 # Intro to Data Science Final
 
 # https://pythonguides.com/python-plot-multiple-lines/
