--- a/index.html
+++ b/index.html
@@ -1,19 +1,23 @@
 
 <!DOCTYPE html>
 <html>
-<body>
-        
-        pre code {
-  background-color: #eee;
-  border: 1px solid #999;
-  display: block;
-  padding: 20px;
+<head>
+<style>
+code {
+  font-family: Consolas,"courier new";
+  color: crimson;
+  background-color: #f1f1f1;
+  padding: 2px;
+  font-size: 105%;
+  display: block
 }
-        <pre>
-        
-<code>
+</style>
+</head>
+<body>
 
-# Cora Wagner Coleman Doherty, Nathaniel Champion
+        <p>
+        <code>
+# Cora Wagner, Coleman Doherty, Nathaniel Champion
 # Intro to Data Science Final
 
 # https://pythonguides.com/python-plot-multiple-lines/
@@ -108,7 +112,8 @@ plt.show()
 
 # graph(t_sober, t_high, y_sober, y_high, x_name)
 # graph(soberDF['Placement'], highDF['Placement'], soberDF['Time'], highDF['Time'], p)
+        </code>
+        </p>
 
-</code>
-</pre>
 </body>
+</html>
