--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <style>
 code {
   font-family: Consolas,"courier new";
-  color: crimson;
+  color: black;
   background-color: #f1f1f1;
   padding: 2px;
   font-size: 105%;
@@ -15,7 +15,7 @@ code {
 </head>
 <body>
 
-        <p>
+        
         <code>
 # Cora Wagner, Coleman Doherty, Nathaniel Champion
 # Intro to Data Science Final
@@ -113,7 +113,7 @@ plt.show()
 # graph(t_sober, t_high, y_sober, y_high, x_name)
 # graph(soberDF['Placement'], highDF['Placement'], soberDF['Time'], highDF['Time'], p)
         </code>
-        </p>
+        
 
 </body>
 </html>
