--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ code {
 
         
         <code>
-# Cora Wagner, Coleman Doherty, Nathaniel Champion
+          # Cora Wagner, Coleman Doherty, Nathaniel Champion </code> /n test <code>
 # Intro to Data Science Final
 
 # https://pythonguides.com/python-plot-multiple-lines/
