--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@ code {
 </head>
 <body>
 
-        
+       <pre> 
         <code>
-          # Cora Wagner, Coleman Doherty, Nathaniel Champion </code> /n test <code>
+# Cora Wagner, Coleman Doherty, Nathaniel Champion 
 # Intro to Data Science Final
 
 # https://pythonguides.com/python-plot-multiple-lines/
@@ -113,7 +113,7 @@ plt.show()
 # graph(t_sober, t_high, y_sober, y_high, x_name)
 # graph(soberDF['Placement'], highDF['Placement'], soberDF['Time'], highDF['Time'], p)
         </code>
-        
+        </pre>
 
 </body>
 </html>
