--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@ code {
   background-color: #f1f1f1;
   padding: 2px;
   font-size: 105%;
-  display: block
+  display: block;
+  counter-increment: line;
 }
 </style>
 </head>
