--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
 <style>
 code {
   font-family: Consolas,"courier new";
-  color: crimson;
+  color: black;
   background-color: #f1f1f1;
   padding: 2px;
   font-size: 105%;
   display: block;
   counter-increment: line;
+  content: counter(line);
 }
 </style>
 </head>
